# mdbook-mdinclude

./: Cargo.toml  README.md
src/: main.rs
