[package]
name = "mdbook-mdinclude"
version = "0.1.0"
edition = "2021"
keywords = ["mdbook", "preprocessor"]
categories = ["text-processing"]

[dependencies]
anyhow = "1.0.71"
clap = "2.*"
env_logger = "^0.11.1"
log = "^0.4.17"
mdbook = "^0.4.37"
once_cell = "1.17.1"
regex = "1.8.1"
serde_json = "1.*"
